# CatalogOps-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py  __main__.py  main.py  routes.py  schemas.py  store.py  ws.py
apps/web/: README.md  index.html  package-lock.json  vite.config.ts
data/eval/: ecommerce_policy_eval.json  policy_eval.json
data/policy_docs/: category_policy.md  (+28 more)
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  EVALUATION.md  SPEC.md
models/: clothing_minilm_linearsvm.joblib  clothing_minilm_logreg.joblib  ecommerce_minilm_linearsvm.joblib  ecommerce_minilm_logreg.joblib
scripts/: catalogops_cli.py  evaluate_catalogops_formal.py  evaluate_minilm_clothing.py  evaluate_policy_rag_retrieval.py  ingest_policy_docs.py  prepare_clothing_dataset.py  prepare_ecommerce_unified_dataset.py  run_ecommerce_policy_smoke.py  smoke_api_e2e.py  train_clothing_minilm_classifier.py  train_ecommerce_minilm_classifier.py
tests/: test_api_batch.py  test_api_review.py  test_attribute_extractor.py  test_batch_analysis.py  test_batch_report.py  test_catalog_rules.py  test_catalog_schemas.py  test_category_predictor.py  test_ecommerce_policy_assets.py  test_evidence_guard.py  test_formal_evaluation.py  test_mock_mode.py  test_policy_rag.py  test_policy_rag_retrieval_modes.py  test_policy_retriever.py  test_quality_scorer.py  test_single_review.py  test_single_review_graph.py  test_structure_smoke.py  test_verify_evidence.py
(+33 files in other folders)
