[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalogops-agent"
version = "0.1.0"
description = "Catalog governance Agent for category prediction, attribute checks, and policy-backed product review"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "langgraph>=0.2.40,<0.5",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.8",
  "langchain-core>=0.2.0",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.4",
]
rag = [
  "pymilvus>=2.5",
  "sentence-transformers>=2.7",
  "milvus-lite>=2.4; platform_system != 'Windows'",
]
eval = [
  "joblib>=1.3",
  "scikit-learn>=1.4",
  "sentence-transformers>=2.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
